--- a/themes/landscape/layout/_partial/footer.ejs
+++ b/themes/landscape/layout/_partial/footer.ejs
@@ -5,9 +5,11 @@
   <% } %>
   <div class="outer">
     <div id="footer-info" class="inner">
+    <% if (theme.visitor_counter)  { %>
       <span id="busuanzi_container_site_pv">
 	    本站总访问量<span id="busuanzi_value_site_pv"></span>次
       </span><br>
+    <% } %>
       &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %><br>
       <%= __('powered_by') %> <a href="http://hexo.io/" target="_blank">Hexo</a>
     </div>
